--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel ="stylesheet" href="/css/style.css">
+    <link rel ="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
          <div class="todo-app">
-              <h1>To-Do-List<img src="/image/icon.png"></h1>
+              <h1>To-Do-List<img src="icon.png"></h1>
       <div class="row">
           <input type="text"  id="input-box" placeholder="add your text">
            <button onclick ="addTask()">Add</button>
@@ -22,7 +22,7 @@
 
          </div>
     </div>
-<script src="/js/script.js"></script>
+<script src="script.js"></script>
 
 </body>
 </html>
